--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-streamlit
-importhttp.client
-json
-pandas
-matplotlib.pyplot
-reportlab.lib.pagesizes
-re
-io
-datetime
-math
+streamlit==1.20.0
+http.client==0.0.0  # Included in Python standard library, no need to install separately
+pandas==1.5.3
+matplotlib==3.8.0
+reportlab==3.6.0
